--- a/practice animation/readme
+++ b/practice animation/readme
@@ -1,33 +1,45 @@
 # 🧪 Practice Pixel Animations
 
-This folder contains **practice animations** redrawn for educational purposes.  
-They are based on or inspired by original game sprites found on public sprite databases like [The Spriters Resource](https://www.spriters-resource.com/).
+This folder contains **practice pixel art and animations** redrawn or inspired by existing works.  
+These are **not original designs**, but hand-drawn recreations made for learning animation, pixel structure, and art flow.
 
 ---
 
 ## ⚠️ Disclaimer
 
-- These are **not original creations**.
-- I do **not own** the characters, art, or animations.
-- These assets are **redrawn by hand at lower resolution** to study motion, form, and animation flow.
-- **Not for commercial use**.
-- All rights go to the respective original creators and studios (e.g., SNK, Capcom, etc.).
+- I do **not own** any of the original characters, artwork, or animations these are based on.
+- These are **non-commercial studies** used purely for education and skill development.
+- All rights belong to the respective creators, studios, or publishers.
+- Assets were redrawn manually at lower resolution, inspired by references from public sites like Pinterest and [The Spriters Resource](https://www.spriters-resource.com/).
+
+> If any original creator wants their reference removed, I will respect that request immediately.
 
 ---
 
-## 📁 Included:
+## 📁 Included Files
 
-- `lovely_demon_redraw.png`  
-  > Inspired by *Lovely Mummy* from *Metal Slug Commander*, submitted by **Patchworks** on The Spriters Resource.
+| File Name              | Description                              | Note                  |
+|------------------------|------------------------------------------|------------------------|
+| `fire.png`             | A fire loop animation practice           | Inspired by game fx    |
+| `flappy.png`           | Flappy bird sprite redraw                | Fan-practice only      |
+| `lovely demon sprites.png` | Redraw of Lovely Mummy character sprite | Metal Slug Commander   |
+| `lovely demon.gif`     | Animation test using `lovely demon`      | Redrawn from sprite    |
+| `matrix.png`           | Practice pixel test (Matrix theme)       | For lighting practice  |
+| `mini robort.png`      | Small cartoon robot sprite                | Pinterest reference    |
+| `the one man.png`      | Redraw of a character pose                | For animation study    |
+| `thunder.png`          | Thunder visual effect practice           | Frame-by-frame study   |
 
 ---
 
-## ✅ Purpose
+## 🎯 Purpose
 
-These practice pieces are:
-- For improving my animation skills
-- For learning traditional pixel art timing and motion
-- For building discipline before I develop fully original work
+These files are:
+- Created for practice only
+- Helping me improve motion, timing, and sprite-building
+- NOT to be reused, resold, or claimed as original art
 
-> My original creations can be found in the `original-animations/` folder.
+For fully original pixel art and animation, see the `original-animations/` folder (coming soon).
 
+---
+
+*Made with ❤️ for study and improvement.*
